--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,6 +46,7 @@ const footerLinks = [
 
 <html lang="zh-TW">
 <head>
+    <link rel="canonical" href="https://hub.twprobe.com/" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{seoTitle}</title>
